--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
         <main>
             <aside>
                 <img src="resources\profilepicture.png" alt="Profile Picture" />
-                <div>
+                <div class="sidebar">
                     <h2>University of Toronto</h2>
-                    <ul>
-                        <li><a href="#">Email</a></li>
-                        <li><a href="#">Linkedin</a></li>
-                    </ul>
+                    <a href="#">Email</a><br/>
+                    <a href="#">Linkedin</a>
                 </div>
             </aside>
 
