--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li class="navmain"><a href="#">Justin Wong</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="resources/Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
         </header>
@@ -28,15 +28,19 @@
             <aside>
                 <img src="resources\profilepicture.png" alt="Profile Picture" />
                 <div class="sidebar">
-                    <h2>University of Toronto</h2>
-                    <a href="#">Email</a><br/>
-                    <a href="#">Linkedin</a>
+                    <h2>Justin Wong</h2>
+                    <p> University of Toronto </p>
+                    <ul>
+                        <li>Toronto, ON</li>
+                        <li><a href="#">Email</a><br/></li>
+                        <li><a href="#">LinkedIn</a></li>
+                    </ul>
                 </div>
             </aside>
 
             <section>
                 <h1>About Me</h1>
-                <p>I am a #-year Computer Science student studying at the University of Toronto with an interest in algorithms and mathematics.</p>
+                <p class="autodate">I am a #-year Computer Science student studying at the University of Toronto with an interest in algorithms and mathematics.</p>
                 <p>I enjoy tackling challenging problems and building efficient solutions. In 2025, Together with my teammates on the University of Toronto ICPC team, I advanced to the ICPC World Finals held in Baku during early September.</p>
             </section>
         </main>
