--- a/website/index.html
+++ b/website/index.html
@@ -32,8 +32,8 @@
                     <p> University of Toronto </p>
                     <ul>
                         <li>Toronto, ON</li>
-                        <li><a href="#">Email</a><br/></li>
-                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="mailto:wongjustinmatthew2005@gmail.com">Email</a><br/></li>
+                        <li><a href="https://www.linkedin.com/in/justin-wong-8298042a8/" target="_blank">LinkedIn</a></li>
                     </ul>
                 </div>
             </aside>
