--- a/website/index.html
+++ b/website/index.html
@@ -17,8 +17,8 @@
         <header>
             <nav>
                 <ul>
-                    <li class="navmain"><a href="#">Justin Wong</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li class="navmain"><a href="">Justin Wong</a></li>
+                    <li><a href="projects">Projects</a></li>
                     <li><a href="resources/Resume.pdf">Resume</a></li>
                 </ul>
             </nav>
